java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testLocalAndParamIncorrect57990b-hints.pass
Create field foo in org.netbeans.test.java.hints.LocalVarParam57990b
